// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxl childWrap auto 1`] = `
<div
  className="sc-hSdWYo cTXxZN"
  data-name="Boxl"
>
  <div
    className="sc-eHgmQL buEvsH"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-eHgmQL buEvsH"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`boxl childWrap even 1`] = `
<div
  className="sc-jWBwVP fpqoaz"
  data-name="Boxl"
>
  <div
    className="sc-brqgnP gCpxhn"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-brqgnP gCpxhn"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
  <div
    className="sc-brqgnP emInwg"
    data-name="BoxlChild"
  />
  <div
    className="sc-brqgnP emInwg"
    data-name="BoxlChild"
  />
</div>
`;

exports[`boxl direction default 1`] = `
<div
  className="sc-kpOJdX frRTgV"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction horizontal 1`] = `
<div
  className="sc-kEYyzF gOYnrP"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction vertical 1`] = `
<div
  className="sc-jKJlTe huTbaD"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl edge-cases handles null child in children array 1`] = `
<div
  className="sc-chPdSV LgyEa"
  data-name="Boxl"
/>
`;

exports[`boxl structure Renders correct structure when no spacing 1`] = `
<div
  className="sc-bwzfXH RkOMy"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`boxl structure Renders correct structure when spacing AND children length > 1 1`] = `
<div
  className="sc-bZQynM hmYzAv"
  data-name="Boxl"
>
  <div
    className="sc-gzVnrw gviVII"
    data-name="BoxlChildren"
  >
    <div
      className="sc-htoDjs dCMzwX"
      data-name="BoxlChild"
    >
      <div>
        Text 1
      </div>
    </div>
    <div
      className="sc-htoDjs dCMzwX"
      data-name="BoxlChild"
    >
      <div>
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure Renders correct structure when spacing AND children length > 1 and children are Boxl 1`] = `
<div
  className="sc-dnqmqq ilEALG"
  data-name="Boxl"
>
  <div
    className="sc-iwsKbI fdOaWl"
    data-name="BoxlChildren"
  >
    <div
      className="sc-gZMcBi bLlThd"
      data-name="BoxlChild"
    >
      <div
        className="sc-VigVT faYjXQ"
        data-name="Boxl"
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-gZMcBi bLlThd"
      data-name="BoxlChild"
    >
      <div
        className="sc-jzJRlG hXlUWV"
        data-name="Boxl"
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure Renders correct structure when spacing BUT children length === 1 1`] = `
<div
  className="sc-ifAKCX gZjnqQ"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`rerender maintains element instance between renders 1`] = `
<input
  class="sc-iRbamj jxEuuw"
  data-name="Boxl"
  placeholder="test1"
  value="My password is PASSWORD"
/>
`;

exports[`rerender maintains element instance between renders 2`] = `
<input
  class="sc-csuQGl dHhDEj"
  data-name="Boxl"
  placeholder="test2"
  value="My password is PASSWORD"
/>
`;
